ircv3_parse_derive/tests/ui/ser/fail/nested_missing_attribute.rs
use ircv3_parse_derive::ToMessage;

struct Tag(String);

#[derive(ToMessage)]
struct A {
    tag: Option<Tag>,
}

fn main() {}
