ircv3_parse_derive/tests/ui/ser/fail/nested_missing_attribute.stderr
error: field `tag` requires an IRC attribute for ToMessage serialization
 --> tests/ui/ser/fail/nested_missing_attribute.rs:7:5
  |
7 |     tag: Option<Tag>,
  |     ^^^^^^^^^^^^^^^^
